Renderizado cards dos produtos, finalizado o envio do arquivo csv para a api

--- a/ecommerce-front/src/App.css
+++ b/ecommerce-front/src/App.css
@@ -21,3 +21,14 @@ label {
   cursor: pointer;
   margin: auto;
 }
+
+.section-buttons{
+  display: flex;
+  flex-direction: column;
+}
+
+.section-buttons button{
+  margin: auto;
+  margin-top: 10px;
+  cursor: pointer;
+}
